Clean-up BookingPage.css + icons in form fields now correctly aligned

--- a/src/App.css
+++ b/src/App.css
@@ -119,6 +119,17 @@ p {
 
 .error-message {
   color: red;
+  position: absolute;
+  padding: 0;
+  margin: 0;
+  left: 40px;
+}
+
+#date-error,
+#name-error,
+#email-error,
+#notes-error {
+  margin-top: -21px;
 }
 
 button {
